# slothscript

./: Makefile  draft.md  dune-project  sloth_script.opam
.github/workflows/: ci.yaml
examples/: fibonacci.ss  tax_rate_schedules.ss
lib/: ast.ml  dune  parser.mly  sloth_stdlib.ml
ocaml/: .gitignore  Makefile  dune-project
ocaml/lib/: ast.ml  compiler.ml  dune  lexer.mll  parser.mly  runtime.ml  sloth_stdlib.ml  stdlib.ml  types.ml
ocaml/test/: dune  main.ml  test_sloth_script.ml
test/: dune
tool/: Makefile  ci.ml  dune
